[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/RockBase.gd" type="Script" id=1]

[node name="RockBase" type="Node2D" groups=[
"rock",
]]
script = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
